fixed wrapping text in the landing page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -227,7 +227,6 @@ div.secondquadrant > div.links{
 position: absolute;
 bottom: 0;
 right: 0;
-width: 25%;
 text-align: right;
 display: block;
 }
